--- a/index.html
+++ b/index.html
@@ -425,9 +425,8 @@
                             </li>
                         </ul>
 
-                        <ul>
-                            <li class="m-snb-title"><a href="#">창업문의</a></li>
-                        </ul>
+                       <div class="m-snb-title-div"><a href="#">창업문의</a></div>
+                     
                     </div>
 
 
